# realfagstermer

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  Realfagstermer_description.md  buildspec.yml  dodo.py  logging.cfg  logging.yml  publish.py  pyproject.toml  realfagstermer.scheme.ttl  requirements.txt  ubo-onto.ttl  update-fuseki.sh
.github/ISSUE_TEMPLATE/: endringsforslag.md  forslag-til-ny-term.md  sammensl-ingsforslag.md  sletteforslag.md
.github/workflows/: assign-to-project.yml
src/: .gitignore  categories_and_mappings.ttl  idformer.txt  idsteder.txt  idstrenger.txt  idtermer.txt  idtider.txt  msc-ubo.mappings.nt  real_agrovoc_mappings.ttl  real_hume_mappings.ttl  real_tekord_mappings.ttl  sonja_todo.json  ub-onto.ttl
